--- a/Neo4j Python Code.ipynb
+++ b/Neo4j Python Code.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -38,71 +38,117 @@
      "text": [
       "{u'city': u'STAMFORD', u'licenseNumber': u'046965', u'firstName': u'MARC', u'typeCode': u'1', u'middleName': u'ERIC', u'lastName': u'BRODSKY', u'stateName': u'CT', u'zipCode': u'06901', u'licenseState': u'CT', u'taxonomyCode': u'208VP0000X', u'phoneNumber': u'2032764777', u'crediantial': u'MD', u'gender': u'M', u'addressLine1': u'32 STRAWBERRY HILL COURT'}\n",
       "----\n",
+      "{u'shared': u'151       ', u'unique': u'11        ', u'same_day': u'0'}\n",
       "--**---\n",
-      "{u'city': u'STAMFORD', u'licenseNumber': u'5551', u'firstName': u'MICHAEL', u'typeCode': u'1', u'middleName': u'JAMES', u'lastName': u'MOCCIO', u'stateName': u'CT', u'zipCode': u'06901', u'licenseState': u'CT', u'taxonomyCode': u'122300000X', u'phoneNumber': u'2033237137', u'crediantial': u'DDS', u'gender': u'M', u'addressLine1': u'700 SUMMER STREET', u'adressLine2': u'1D'}\n",
+      "{u'city': u'STAMFORD', u'licenseNumber': u'046965', u'firstName': u'MARC', u'typeCode': u'1', u'middleName': u'ERIC', u'lastName': u'BRODSKY', u'stateName': u'CT', u'zipCode': u'06901', u'licenseState': u'CT', u'taxonomyCode': u'208VP0000X', u'phoneNumber': u'2032764777', u'crediantial': u'MD', u'gender': u'M', u'addressLine1': u'32 STRAWBERRY HILL COURT'}\n",
       "----\n",
+      "{u'shared': u'505       ', u'unique': u'19        ', u'same_day': u'0'}\n",
+      "--**---\n",
+      "{u'city': u'STAMFORD', u'licenseNumber': u'046965', u'firstName': u'MARC', u'typeCode': u'1', u'middleName': u'ERIC', u'lastName': u'BRODSKY', u'stateName': u'CT', u'zipCode': u'06901', u'licenseState': u'CT', u'taxonomyCode': u'208VP0000X', u'phoneNumber': u'2032764777', u'crediantial': u'MD', u'gender': u'M', u'addressLine1': u'32 STRAWBERRY HILL COURT'}\n",
+      "----\n",
+      "{u'shared': u'95        ', u'unique': u'16        ', u'same_day': u'0'}\n",
+      "--**---\n",
+      "{u'city': u'STAMFORD', u'licenseNumber': u'046965', u'firstName': u'MARC', u'typeCode': u'1', u'middleName': u'ERIC', u'lastName': u'BRODSKY', u'stateName': u'CT', u'zipCode': u'06901', u'licenseState': u'CT', u'taxonomyCode': u'208VP0000X', u'phoneNumber': u'2032764777', u'crediantial': u'MD', u'gender': u'M', u'addressLine1': u'32 STRAWBERRY HILL COURT'}\n",
+      "----\n",
+      "{u'shared': u'67        ', u'unique': u'15        ', u'same_day': u'0'}\n",
+      "--**---\n",
+      "{u'city': u'STAMFORD', u'licenseNumber': u'046965', u'firstName': u'MARC', u'typeCode': u'1', u'middleName': u'ERIC', u'lastName': u'BRODSKY', u'stateName': u'CT', u'zipCode': u'06901', u'licenseState': u'CT', u'taxonomyCode': u'208VP0000X', u'phoneNumber': u'2032764777', u'crediantial': u'MD', u'gender': u'M', u'addressLine1': u'32 STRAWBERRY HILL COURT'}\n",
+      "----\n",
+      "{u'shared': u'110       ', u'unique': u'11        ', u'same_day': u'0'}\n",
+      "--**---\n",
+      "{u'city': u'STAMFORD', u'licenseNumber': u'046965', u'firstName': u'MARC', u'typeCode': u'1', u'middleName': u'ERIC', u'lastName': u'BRODSKY', u'stateName': u'CT', u'zipCode': u'06901', u'licenseState': u'CT', u'taxonomyCode': u'208VP0000X', u'phoneNumber': u'2032764777', u'crediantial': u'MD', u'gender': u'M', u'addressLine1': u'32 STRAWBERRY HILL COURT'}\n",
+      "----\n",
+      "{u'shared': u'2457      ', u'unique': u'85        ', u'same_day': u'0'}\n",
+      "--**---\n",
+      "{u'city': u'STAMFORD', u'licenseNumber': u'046965', u'firstName': u'MARC', u'typeCode': u'1', u'middleName': u'ERIC', u'lastName': u'BRODSKY', u'stateName': u'CT', u'zipCode': u'06901', u'licenseState': u'CT', u'taxonomyCode': u'208VP0000X', u'phoneNumber': u'2032764777', u'crediantial': u'MD', u'gender': u'M', u'addressLine1': u'32 STRAWBERRY HILL COURT'}\n",
+      "----\n",
+      "{u'shared': u'365       ', u'unique': u'18        ', u'same_day': u'8'}\n",
+      "--**---\n",
+      "{u'city': u'STAMFORD', u'licenseNumber': u'046965', u'firstName': u'MARC', u'typeCode': u'1', u'middleName': u'ERIC', u'lastName': u'BRODSKY', u'stateName': u'CT', u'zipCode': u'06901', u'licenseState': u'CT', u'taxonomyCode': u'208VP0000X', u'phoneNumber': u'2032764777', u'crediantial': u'MD', u'gender': u'M', u'addressLine1': u'32 STRAWBERRY HILL COURT'}\n",
+      "----\n",
+      "{u'shared': u'123       ', u'unique': u'15        ', u'same_day': u'0'}\n",
+      "--**---\n",
+      "{u'city': u'STAMFORD', u'licenseNumber': u'046965', u'firstName': u'MARC', u'typeCode': u'1', u'middleName': u'ERIC', u'lastName': u'BRODSKY', u'stateName': u'CT', u'zipCode': u'06901', u'licenseState': u'CT', u'taxonomyCode': u'208VP0000X', u'phoneNumber': u'2032764777', u'crediantial': u'MD', u'gender': u'M', u'addressLine1': u'32 STRAWBERRY HILL COURT'}\n",
+      "----\n",
+      "{u'shared': u'105       ', u'unique': u'14        ', u'same_day': u'0'}\n",
+      "--**---\n",
+      "{u'city': u'STAMFORD', u'licenseNumber': u'046965', u'firstName': u'MARC', u'typeCode': u'1', u'middleName': u'ERIC', u'lastName': u'BRODSKY', u'stateName': u'CT', u'zipCode': u'06901', u'licenseState': u'CT', u'taxonomyCode': u'208VP0000X', u'phoneNumber': u'2032764777', u'crediantial': u'MD', u'gender': u'M', u'addressLine1': u'32 STRAWBERRY HILL COURT'}\n",
+      "----\n",
+      "{u'shared': u'73        ', u'unique': u'12        ', u'same_day': u'0'}\n",
+      "--**---\n",
+      "{u'city': u'STAMFORD', u'licenseNumber': u'046965', u'firstName': u'MARC', u'typeCode': u'1', u'middleName': u'ERIC', u'lastName': u'BRODSKY', u'stateName': u'CT', u'zipCode': u'06901', u'licenseState': u'CT', u'taxonomyCode': u'208VP0000X', u'phoneNumber': u'2032764777', u'crediantial': u'MD', u'gender': u'M', u'addressLine1': u'32 STRAWBERRY HILL COURT'}\n",
+      "----\n",
+      "{u'shared': u'2135      ', u'unique': u'83        ', u'same_day': u'41'}\n",
+      "--**---\n",
+      "{u'city': u'STAMFORD', u'licenseNumber': u'046965', u'firstName': u'MARC', u'typeCode': u'1', u'middleName': u'ERIC', u'lastName': u'BRODSKY', u'stateName': u'CT', u'zipCode': u'06901', u'licenseState': u'CT', u'taxonomyCode': u'208VP0000X', u'phoneNumber': u'2032764777', u'crediantial': u'MD', u'gender': u'M', u'addressLine1': u'32 STRAWBERRY HILL COURT'}\n",
+      "----\n",
+      "{u'shared': u'87        ', u'unique': u'14        ', u'same_day': u'0'}\n",
       "--**---\n",
       "{u'city': u'STAMFORD', u'licenseNumber': u'029151', u'firstName': u'VITO', u'typeCode': u'1', u'lastName': u'FERRUCCI', u'stateName': u'CT', u'zipCode': u'06901', u'licenseState': u'CT', u'taxonomyCode': u'207V00000X', u'phoneNumber': u'2033254665', u'crediantial': u'MD', u'gender': u'M', u'addressLine1': u'833 SUMMER ST', u'adressLine2': u'SUITE 1B'}\n",
       "----\n",
+      "{u'shared': u'26        ', u'unique': u'15        ', u'same_day': u'0'}\n",
+      "--**---\n",
+      "{u'city': u'STAMFORD', u'licenseNumber': u'029151', u'firstName': u'VITO', u'typeCode': u'1', u'lastName': u'FERRUCCI', u'stateName': u'CT', u'zipCode': u'06901', u'licenseState': u'CT', u'taxonomyCode': u'207V00000X', u'phoneNumber': u'2033254665', u'crediantial': u'MD', u'gender': u'M', u'addressLine1': u'833 SUMMER ST', u'adressLine2': u'SUITE 1B'}\n",
+      "----\n",
+      "{u'shared': u'199       ', u'unique': u'35        ', u'same_day': u'0'}\n",
+      "--**---\n",
+      "{u'city': u'STAMFORD', u'licenseNumber': u'029151', u'firstName': u'VITO', u'typeCode': u'1', u'lastName': u'FERRUCCI', u'stateName': u'CT', u'zipCode': u'06901', u'licenseState': u'CT', u'taxonomyCode': u'207V00000X', u'phoneNumber': u'2033254665', u'crediantial': u'MD', u'gender': u'M', u'addressLine1': u'833 SUMMER ST', u'adressLine2': u'SUITE 1B'}\n",
+      "----\n",
+      "{u'shared': u'58        ', u'unique': u'32        ', u'same_day': u'43'}\n",
+      "--**---\n",
+      "{u'city': u'STAMFORD', u'licenseNumber': u'029151', u'firstName': u'VITO', u'typeCode': u'1', u'lastName': u'FERRUCCI', u'stateName': u'CT', u'zipCode': u'06901', u'licenseState': u'CT', u'taxonomyCode': u'207V00000X', u'phoneNumber': u'2033254665', u'crediantial': u'MD', u'gender': u'M', u'addressLine1': u'833 SUMMER ST', u'adressLine2': u'SUITE 1B'}\n",
+      "----\n",
+      "{u'shared': u'26        ', u'unique': u'11        ', u'same_day': u'9'}\n",
+      "--**---\n",
+      "{u'city': u'STAMFORD', u'licenseNumber': u'029151', u'firstName': u'VITO', u'typeCode': u'1', u'lastName': u'FERRUCCI', u'stateName': u'CT', u'zipCode': u'06901', u'licenseState': u'CT', u'taxonomyCode': u'207V00000X', u'phoneNumber': u'2033254665', u'crediantial': u'MD', u'gender': u'M', u'addressLine1': u'833 SUMMER ST', u'adressLine2': u'SUITE 1B'}\n",
+      "----\n",
+      "{u'shared': u'199       ', u'unique': u'37        ', u'same_day': u'32'}\n",
+      "--**---\n",
+      "{u'city': u'STAMFORD', u'licenseNumber': u'029151', u'firstName': u'VITO', u'typeCode': u'1', u'lastName': u'FERRUCCI', u'stateName': u'CT', u'zipCode': u'06901', u'licenseState': u'CT', u'taxonomyCode': u'207V00000X', u'phoneNumber': u'2033254665', u'crediantial': u'MD', u'gender': u'M', u'addressLine1': u'833 SUMMER ST', u'adressLine2': u'SUITE 1B'}\n",
+      "----\n",
+      "{u'shared': u'23        ', u'unique': u'13        ', u'same_day': u'9'}\n",
       "--**---\n",
       "{u'city': u'STAMFORD', u'licenseNumber': u'031164', u'firstName': u'LEONARD', u'typeCode': u'1', u'lastName': u'FERRUCCI', u'stateName': u'CT', u'zipCode': u'06901', u'licenseState': u'CT', u'taxonomyCode': u'207V00000X', u'phoneNumber': u'2033254665', u'crediantial': u'MD', u'gender': u'M', u'addressLine1': u'833 SUMMER ST', u'adressLine2': u'SUITE 1B'}\n",
       "----\n",
+      "{u'shared': u'24        ', u'unique': u'11        ', u'same_day': u'0'}\n",
+      "--**---\n",
+      "{u'city': u'STAMFORD', u'licenseNumber': u'031164', u'firstName': u'LEONARD', u'typeCode': u'1', u'lastName': u'FERRUCCI', u'stateName': u'CT', u'zipCode': u'06901', u'licenseState': u'CT', u'taxonomyCode': u'207V00000X', u'phoneNumber': u'2033254665', u'crediantial': u'MD', u'gender': u'M', u'addressLine1': u'833 SUMMER ST', u'adressLine2': u'SUITE 1B'}\n",
+      "----\n",
+      "{u'shared': u'208       ', u'unique': u'32        ', u'same_day': u'0'}\n",
+      "--**---\n",
+      "{u'city': u'STAMFORD', u'licenseNumber': u'031164', u'firstName': u'LEONARD', u'typeCode': u'1', u'lastName': u'FERRUCCI', u'stateName': u'CT', u'zipCode': u'06901', u'licenseState': u'CT', u'taxonomyCode': u'207V00000X', u'phoneNumber': u'2033254665', u'crediantial': u'MD', u'gender': u'M', u'addressLine1': u'833 SUMMER ST', u'adressLine2': u'SUITE 1B'}\n",
+      "----\n",
+      "{u'shared': u'63        ', u'unique': u'25        ', u'same_day': u'41'}\n",
+      "--**---\n",
+      "{u'city': u'STAMFORD', u'licenseNumber': u'031164', u'firstName': u'LEONARD', u'typeCode': u'1', u'lastName': u'FERRUCCI', u'stateName': u'CT', u'zipCode': u'06901', u'licenseState': u'CT', u'taxonomyCode': u'207V00000X', u'phoneNumber': u'2033254665', u'crediantial': u'MD', u'gender': u'M', u'addressLine1': u'833 SUMMER ST', u'adressLine2': u'SUITE 1B'}\n",
+      "----\n",
+      "{u'shared': u'256       ', u'unique': u'34        ', u'same_day': u'29'}\n",
+      "--**---\n",
+      "{u'city': u'STAMFORD', u'licenseNumber': u'031164', u'firstName': u'LEONARD', u'typeCode': u'1', u'lastName': u'FERRUCCI', u'stateName': u'CT', u'zipCode': u'06901', u'licenseState': u'CT', u'taxonomyCode': u'207V00000X', u'phoneNumber': u'2033254665', u'crediantial': u'MD', u'gender': u'M', u'addressLine1': u'833 SUMMER ST', u'adressLine2': u'SUITE 1B'}\n",
+      "----\n",
+      "{u'shared': u'21        ', u'unique': u'14        ', u'same_day': u'13'}\n",
       "--**---\n",
       "{u'city': u'STAMFORD', u'licenseNumber': u'034978', u'firstName': u'JOHN', u'typeCode': u'1', u'middleName': u'A', u'lastName': u'MORRIS', u'stateName': u'CT', u'zipCode': u'06901', u'licenseState': u'CT', u'taxonomyCode': u'207V00000X', u'phoneNumber': u'2033254665', u'crediantial': u'MD', u'gender': u'M', u'addressLine1': u'833 SUMMER ST', u'adressLine2': u'SUITE 1B'}\n",
       "----\n",
+      "{u'shared': u'32        ', u'unique': u'11        ', u'same_day': u'0'}\n",
       "--**---\n",
-      "{u'city': u'STAMFORD', u'licenseNumber': u'032543', u'firstName': u'FLORENCE', u'typeCode': u'1', u'middleName': u'ANGELA', u'lastName': u'KNOX', u'stateName': u'CT', u'zipCode': u'06901', u'licenseState': u'CT', u'taxonomyCode': u'2084P0800X', u'phoneNumber': u'2033881600', u'crediantial': u'M.D.', u'gender': u'F', u'addressLine1': u'780 SUMMER ST.', u'adressLine2': u'SOUTHWEST CT MENTAL HEALTH SYSTEM-F.S. DUBOIS CENTER'}\n",
+      "{u'city': u'STAMFORD', u'licenseNumber': u'034978', u'firstName': u'JOHN', u'typeCode': u'1', u'middleName': u'A', u'lastName': u'MORRIS', u'stateName': u'CT', u'zipCode': u'06901', u'licenseState': u'CT', u'taxonomyCode': u'207V00000X', u'phoneNumber': u'2033254665', u'crediantial': u'MD', u'gender': u'M', u'addressLine1': u'833 SUMMER ST', u'adressLine2': u'SUITE 1B'}\n",
       "----\n",
-      "--**---\n",
-      "{u'city': u'STAMFORD', u'licenseNumber': u'009722', u'firstName': u'HELENE', u'typeCode': u'1', u'lastName': u'STRAZZA', u'stateName': u'CT', u'zipCode': u'06901', u'licenseState': u'CT', u'taxonomyCode': u'1223P0221X', u'phoneNumber': u'2033235439', u'crediantial': u'DMD', u'gender': u'F', u'addressLine1': u'127 GREYROCK PLACE'}\n",
-      "----\n",
-      "--**---\n",
-      "{u'city': u'STAMFORD', u'licenseNumber': u'1074', u'firstName': u'FRANK', u'typeCode': u'1', u'middleName': u'PAUL', u'lastName': u'CASTALDI', u'stateName': u'CT', u'zipCode': u'06901', u'licenseState': u'CT', u'taxonomyCode': u'152W00000X', u'phoneNumber': u'2033241606', u'crediantial': u'DO', u'gender': u'M', u'addressLine1': u'0NE BANK STREET'}\n",
-      "----\n",
-      "--**---\n",
-      "{u'city': u'STAMFORD', u'licenseNumber': u'004058764', u'typeCode': u'2', u'stateName': u'CT', u'zipCode': u'06901', u'licenseState': u'CT', u'taxonomyCode': u'251300000X', u'addressLine1': u'888 WASHINGTON BLVD', u'businessName': u'STAMFORD PUBLIC SCHOOLS'}\n",
-      "----\n",
-      "--**---\n",
-      "{u'city': u'STAMFORD', u'licenseNumber': u'007446', u'firstName': u'KENYA', u'typeCode': u'1', u'middleName': u'N', u'lastName': u'TOWNSEND', u'stateName': u'CT', u'zipCode': u'06901', u'licenseState': u'CT', u'taxonomyCode': u'1041C0700X', u'phoneNumber': u'2033881592', u'crediantial': u'LCSW', u'gender': u'F', u'addressLine1': u'780 SUMMER ST', u'adressLine2': u'SWCMHS FS DUBOIS CENTER'}\n",
-      "----\n",
-      "--**---\n",
-      "{u'city': u'STAMFORD', u'licenseNumber': u'249659', u'firstName': u'AMANDA', u'typeCode': u'1', u'middleName': u'W', u'lastName': u'PONG', u'stateName': u'CT', u'zipCode': u'06901', u'licenseState': u'NY', u'taxonomyCode': u'2084N0402X', u'phoneNumber': u'6193222577', u'crediantial': u'MD', u'gender': u'F', u'addressLine1': u'50 FOREST ST', u'adressLine2': u'APT 1421'}\n",
-      "----\n",
-      "--**---\n",
-      "{u'city': u'STAMFORD', u'licenseNumber': u'002867', u'firstName': u'JEANETTE', u'typeCode': u'1', u'middleName': u'SUAREZ', u'lastName': u'TRUJILLO', u'stateName': u'CT', u'zipCode': u'06901', u'licenseState': u'CT', u'taxonomyCode': u'103T00000X', u'phoneNumber': u'2033277200', u'gender': u'F', u'addressLine1': u'700 SUMMER ST', u'adressLine2': u'SUITE 1A'}\n",
-      "----\n",
-      "--**---\n",
-      "{u'city': u'STAMFORD', u'licenseNumber': u'004096', u'firstName': u'MARISA', u'typeCode': u'1', u'lastName': u'EVENTO', u'stateName': u'CT', u'zipCode': u'06901', u'licenseState': u'CT', u'taxonomyCode': u'235Z00000X', u'phoneNumber': u'2039774636', u'crediantial': u'CCC-SLP', u'gender': u'F', u'addressLine1': u'117 VINE RD'}\n",
-      "----\n",
-      "--**---\n",
-      "{u'city': u'STAMFORD', u'licenseNumber': u'11259', u'firstName': u'KHRYSTYNA', u'typeCode': u'1', u'lastName': u'LESKIV', u'stateName': u'CT', u'zipCode': u'06901', u'licenseState': u'CT', u'taxonomyCode': u'1223P0221X', u'addressLine1': u'127 GREYROCK PLACE', u'crediantial': u'D.D.S.', u'gender': u'F'}\n",
-      "----\n",
-      "--**---\n",
-      "{u'city': u'STAMFORD', u'licenseNumber': u'CT023548', u'firstName': u'LUKAS', u'typeCode': u'1', u'middleName': u'A', u'lastName': u'KONANDREAS', u'stateName': u'CT', u'zipCode': u'06901', u'licenseState': u'CT', u'taxonomyCode': u'208000000X', u'phoneNumber': u'2033248800', u'crediantial': u'M.D.', u'gender': u'M', u'addressLine1': u'660 BEDFORD ST'}\n",
-      "----\n",
-      "--**---\n",
-      "{u'city': u'STAMFORD', u'licenseNumber': u'5043', u'typeCode': u'2', u'stateName': u'CT', u'zipCode': u'06901', u'licenseState': u'CT', u'taxonomyCode': u'282N00000X', u'phoneNumber': u'2038039551', u'businessName': u'STAMFORD HOSPITAL', u'addressLine1': u'3 CEDARGATE LN'}\n",
-      "----\n",
-      "--**---\n",
-      "{u'city': u'STAMFORD', u'licenseNumber': u'670204-1', u'firstName': u'KIM', u'typeCode': u'1', u'lastName': u'HENDERSON', u'stateName': u'CT', u'zipCode': u'06901', u'licenseState': u'NY', u'taxonomyCode': u'163W00000X', u'phoneNumber': u'2036534700', u'gender': u'F', u'addressLine1': u'707 SUMMER ST'}\n",
-      "----\n",
-      "--**---\n",
-      "{u'city': u'STAMFORD', u'licenseNumber': u'70 012504', u'firstName': u'BUSHRA', u'typeCode': u'1', u'lastName': u'HELMANDI', u'stateName': u'CT', u'zipCode': u'06901', u'licenseState': u'NY', u'taxonomyCode': u'111N00000X', u'addressLine1': u'163 FRANKLIN ST', u'gender': u'F', u'adressLine2': u'APT 206'}\n",
-      "----\n",
+      "{u'shared': u'175       ', u'unique': u'18        ', u'same_day': u'0'}\n",
       "--**---\n"
      ]
     }
    ],
    "source": [
-    "q = 'match (p:Physician) where p.zipCode = \"' + zipcode + '\" RETURN p LIMIT 25'\n",
+    "q = 'match (p:Physician)-[r]-() where p.zipCode = \"' + zipcode + '\" RETURN p,r LIMIT 25'\n",
     "\n",
-    "results = gdb.query(q, returns=(client.Node))\n",
+    "results = gdb.query(q, returns=(client.Node, client.Relationship))\n",
     "for r in results:\n",
     "    #print r[0]\n",
     "    print r[0].properties\n",
     "    print '----'\n",
     "    #print r[1]\n",
-    "    #print r[1].properties\n",
+    "    print r[1].properties\n",
     "    print '--**---'\n",
     "    #print(\"(%s)-[%s]->(%s)\" % (r[0][\"name\"], r[1], r[2][\"name\"]))\n",
     "# The output:\n",
